@@ -1,4 +1,5 @@
 0.5.8 /
+[Alexandr Topilski]
 - [UnQLite] Save data propertly
 - Commands refactoring
 - Fix some memory leaks
